--- a/views/access/access.ejs
+++ b/views/access/access.ejs
@@ -3,7 +3,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header custom-bg">
-                <h5 class="modal-title" id="exampleModalLabel">Access</h5>
+                <h6 class="font-weight-bold h4 label-title">Access</h6>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -11,17 +11,17 @@
             <div class="custom-modal-body">
                 <div class="card ">
                     <div class="card-header py-2 header-bg">
-                        <h6 class="m-0 font-weight-bold table-title">Update Access: </h6>
+                        <h6 class="pt-2 font-weight-bold h4 label-title">Update Access</h6>
                     </div>
                     <div class="card-body">
                         <div class="row mb-2">
                             <div class="col-md-6">
                                 <label class="form-label" for="accesscode">Access Code</label>
-                                <input autocomplete="off" id="accesscode" name="accesscode" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="accesscode" name="accesscode" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" readonly>        
                             </div>
                             <div class="col-md-6">
                                 <label class="form-label" for="currentAccessName">Current Access Name</label>
-                                <input autocomplete="off" id="currentAccessName" name="currentAccessName" type="text" class="form-control" placeholder="Enter new Access name" aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="currentAccessName" name="currentAccessName" type="text" class="form-control" placeholder="Enter new Access name" aria-label="fullname" aria-describedby="basic-addon1" readonly>        
                             </div>
                         </div>
                         <div class="row mb-2 justify-content-center">
@@ -50,8 +50,8 @@
     <div class="row mb-2">
         <div class="col-lg-12">
             <div class="card shadow">
-                <div class="card-header py-3 header-bg">
-                    <h6 class="m-0 font-weight-bold h4 label-title">Access Type</h6>
+                <div class="card-header pt-3 pb-0 header-bg">
+                    <h6 class="m-0 font-weight-bold h4 label-title">Add Access Type</h6>
                 </div>
                 <div class="card-body extend">
                     <div class="row">
@@ -99,7 +99,7 @@
                 </div>
             </div>
         </div>
-        <div class="card-body">
+        <div class="card-body pt-0">
             <div class="table-responsive scroll-cardbody-size-580 border">
                 <table class="table table-bordered custom-mobile-table" id="access-table" width="100%" cellspacing="10">
                     <thead class="table-header">
