--- a/views/position/position.ejs
+++ b/views/position/position.ejs
@@ -3,7 +3,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header custom-bg">
-                <h5 class="modal-title" id="exampleModalLabel">Position</h5>
+                <h5 class="m-0 font-weight-bold h4 label-title">Position</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -11,17 +11,17 @@
             <div class="custom-modal-body">
                 <div class="card shadow">
                     <div class="card-header py-2 header-bg">
-                        <h6 class="m-0 font-weight-bold table-title">Update Position: </h6>
+                        <h6 class="m-0 font-weight-bold h4 label-title">Update Position </h6>
                     </div>
                     <div class="card-body">
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
                                 <label class="form-label" for="positioncode">Position Code</label>
-                                <input autocomplete="off" autocomplete="off" id="positioncode" name="positioncode" type="text" class="form-control" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" autocomplete="off" id="positioncode" name="positioncode" type="text" class="form-control" aria-describedby="basic-addon1" readonly>        
                             </div>
                             <div class="col-md-6">
                                 <label class="form-label" for="currentPositionName">Current Position Name</label>
-                                <input autocomplete="off" id="currentPositionName" name="currentPositionName" type="text" class="form-control" placeholder="Enter new Position name" aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="currentPositionName" name="currentPositionName" type="text" class="form-control" placeholder="Enter new Position name" aria-label="fullname" aria-describedby="basic-addon1" readonly>        
                             </div>
                         </div>
                         <div class="row mb-2 justify-content-center">
