--- a/views/salesdetails/salesdetails.ejs
+++ b/views/salesdetails/salesdetails.ejs
@@ -115,7 +115,7 @@
 
 <div class="container-fluid">
     <div class="row mb-2">
-        <div class="col-md-9">
+        <div class="col-xl-9">
             <div class="card shadow mb-4 cardbody-size-sales-details">
                 <div class="progress progress-sm mb-2">
                     <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
@@ -167,7 +167,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3 mobile-order-first mb-1">
+        <div class="col-xl-3 mobile-order-first mb-1">
             <div class="card shadow">
                 <div class="card-header py-3 header-bg">
                     <h6 class="m-0 font-weight-bold">Sales Details Filter</h6>
