--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -236,7 +236,7 @@
 
 
 .modal-dialog {
-  max-width: 1000px !important;
+  max-width: 60rem !important;
 }
 
 .custom-modal-body {
@@ -1029,4 +1029,8 @@ button.ani-btn {
   padding-bottom: .75rem;
   max-width: 350px;
   max-height: 350px;
+}
+
+.movement-type {
+  cursor: pointer;
 }
