--- a/views/addon/addonscripts.ejs
+++ b/views/addon/addonscripts.ejs
@@ -6,23 +6,7 @@
     let price = 0;
     let type = "";
 
-    const loader = `  
-            <tr id="loading-state">
-                <td><div class="custom-loader"></div></td>
-                <td><div class="custom-loader"></div></td>
-                <td><div class="custom-loader"></div></td>
-                <td><div class="custom-loader"></div></td>
-                <td><div class="custom-loader"></div></td>
-                <td><div class="custom-loader"></div></td>
-                <td><div class="custom-loader"></div></td>
-                <td><div class="custom-loader"></div></td>
-                <td><div class="custom-loader"></div></td>
-            </tr>`;
-
-    const tbody = $("#datatable tbody");
-    for (let i = 0; i < 12; i++) {
-      tbody.append(loader);
-    }
+    TableLoader("#datatable", 12, 9);
 
     LoadList();
     reloadTableData();
