--- a/views/inventoryhistory.ejs
+++ b/views/inventoryhistory.ejs
@@ -45,6 +45,7 @@
     </a>
     <%- include("scripts.ejs") %>
     <%- include("notification.ejs") %>
+    <%- include("./inventoryhistory/modalDisplays.ejs") %>
     <%- include("./inventoryhistory/inventoryhistoryscripts.ejs") %>
 </body>
 
